# EM_onrobot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  DEVELOPMENT_WORKFLOWS.md  Dockerfile  Dockerfile.base  Dockerfile.desktop  Dockerfile_old  LICENSE  README.md  build.sh  buildBase.sh  buildBaseLocal.sh  compose.yaml  deploy.sh  deployImage.sh  deploy_dev.sh  detect_aruco_pc.py  entrypoint.sh  fastdds.xml  requirement.txt  ros_entrypoint.sh  run.sh  start_dev.ps1  start_dev.sh  test.txt
src/em_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py  tf_transformations.py
src/em_robot/CameraCalibration/: calibrate_image.py  calibration.yaml  capture_calibration_images.py  validate_aruco_distance.py
src/em_robot/config/: calibration.yaml  calibration_ubuntu_test.yaml  cam.yaml  ekf.yaml  ekf_cam.yaml  ekf_desktop.yaml  ekf_real.yaml  marker_map.yaml  marker_map_laptop_test.yaml  markers.yaml
src/em_robot/config/profiles/: real_robot.yaml  (+6 more)
src/em_robot/em_robot/: __init__.py  aruco_camera_test_node.py  aruco_utils.py  base_controller_node.py  camera_sources.py  diagnostic_utils.py  differential_drive.py  em_localization.py  em_movement.py  em_odom.py  fake_imu.py  imu_mock_node.py  led_utils.py  localization_capture.py  localization_node.py  marker_map_io.py  marker_map_loader.py  marker_map_publisher.py  marker_survey_node.py  movement_core.py  old_localization_node.py  profile.py  profile_loader.py  rgb_led_controller_node.py  robot_diagnostics_node.py  robot_state_manager_node.py  robot_state_modes.py  transform_utils.py
src/em_robot/launch/: bringup.launch.py  desk_localization_test.launch.py  em_robot.launch.py  home_lab.launch.py  home_windows.launch.py  localization_debug.launch.py
src/em_robot/rviz/: aruco_test_debug.rviz  localization_debug.rviz
src/em_robot/test/: test_aruco_utils.py  test_camera_sources.py  test_differential_drive.py  test_flake8.py  test_led_utils.py  test_localization_capture.py  test_localization_split_math.py  test_marker_map_io.py  test_marker_map_loader.py  test_movement_core.py  test_profile_loader.py  test_robot_state_modes.py  test_tf_transformations_compat.py
src/em_robot_srv/: CMakeLists.txt  package.xml
(+170 files in other folders)
