<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>em_robot</name>
  <version>0.0.0</version>
  <description>Manage Localization and Movement of EM Robot</description>
  <maintainer email="edy.mariano@epfl.com">mariano</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <exec_depend>em_robot_srv</exec_depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-libcamera</depend>
  <depend>python3-picamera2</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
