[develop]
script_dir=$base/lib/em_robot
[install]
install_scripts=$base/lib/em_robot

[build_ext]
inplace=1

[options]
packages = find:
install_requires =
    setuptools

[options.package_data]
* = *.srv

[options.entry_points]
console_scripts =
    em_localization = em_robot.em_localization:main

[build_rosidl]
rosidl_interface_files = srv/SetInitialPose.srv